--- a/assignment/index.html
+++ b/assignment/index.html
@@ -15,6 +15,11 @@
     <h1>Unit 4, Part 3 - Cart System</h1>
     <p>See console for output. <a href="">Refresh</a> the page to re-run tests.</p>
     <!-- Create an unordered list with any questions you have -->
+     <ul id="questions">
+      <li>How do I add items to the cart?</li>
+      <li>How do Buy Items</li>
+      <li>How do I get my items Shiiped?</li>
+     </ul>
 
     <!-- Used for automated testing -->
     <div id="mocha"></div>
